css/custom.css
* {
    font-family: 'Karla','Verdana','Helvetica', sans-serif;
    box-sizing: border-box;
}


nav {
    text-align: right;


    height: 56px;
    /* background-color: rgba(255, 228, 196, 0.418); */
}

section {
    display: flex;
    flex-wrap: wrap;
    /* background-color: rgba(127, 255, 212, 0.438); */
    padding-top: 7.5em;
    align-items: center;
    
}

.test {
    flex: 1 1 100%;
    text-align: center;
    /* display: inline-block;
    position: relative;
    width: 200px;
    height: 200px;
    overflow: hidden;
    border-radius: 50%; */
}

.svgContainer {
    z-index: 10;
    position: absolute;
    right: 15px;
    bottom: 15px;
    font-size: 2em;
    color: white;
    cursor: pointer;
    filter: drop-shadow( 0px 0px 2px #aaa );
    opacity: 0.7;
    
}

.svgContainer:hover {
    opacity: 1;;
    color: #ff4f4f;
    transition: 0.1s linear;
}

.test img {
    max-width: 250px;
    width: 100%;
    height: auto;
    border-radius: 50%;
    padding: 0 1em;
  }

.s1 {
    justify-content: center;
    padding-left: 2em;
    padding-right: 2em;
}

.s1content {
    /* height: 15em; */
    /* background-color: rgba(137, 43, 226, 0.418); */


    max-width: 650px;
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
}

.s1content > p > span {
    color: #ff4f4f;
}

h1 {
    text-align: center;
    font-size: 3em;
    margin-bottom: 0;
    color: #ff4f4f;
}

p {
    color: #808080;
    font-size: 1.2em;
    line-height: 1.5em;
}

.s1content > p {
    text-align: center;
}

button {
    margin-top:1em;
    font-size: 0.85em;
    line-height: 0.85em;
    font-weight: 700;
    background: #ff4f4f;
    color: white;
    border: none;
    border-radius: 0.4em;
    padding: 0.75em 2em;
    cursor: pointer;
    transition: 0.1s linear;
    display: flex;
    align-items: center;
}

button:hover {
    cursor: pointer;
    transform: translate3d(0, -2px, 0);
    -webkit-transform: translate3d(0, -2px, 0);
}

button > span {
    font-size: 1.2em;
    margin-right: 0.5em;
}

.s2 {
    justify-content: center;
}

.s2content {
    /* margin-left: 10px;
    margin-right: 10px; */
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    flex: 1 1 1100px;
    max-width: 1100px;
    align-items: center;
    
}

.subContent {
    /* text-align: center; */
    padding: 0 2em;

    min-width: 350px;
    flex: 1 1 40%;
    /* width: 50px; */
}

.s2content > .subContent:first-child {
    text-align: right;
}

.s2content > div > span {
    display: inline-block;
    margin: 3px 1px;
    padding: 5px 12px;
    background: #516c85;
    color: white;
    border-radius: 50px;
    font-size: 0.9em;
    transition: 0.1s linear;
}

.s2content > div > span:hover {
    cursor: default;
    background: #ff4f4f;
}

.iframePlaceholder {
    position: relative;
    min-width: 300px;
    padding-bottom: 75%;
    border-radius: 0.75em;
    height: 100%;
    background: url(../img/splashscreen.png);
    background-size: 100% 100%;
}

iframe {
    border: none;
    border-radius: 0.75em;
    position: absolute;
    width: 100%;
    top: 0;
    left: 0;
    height: 100%;
    z-index: -1;
}

h2 {
    color: #454545;
    font-size: 2em;
    margin-bottom: 0;
}

.showElement {
    z-index: 0;
}

.playBtn {
    color: rgba(255, 255, 255, 0.7);
    cursor: pointer;
    font-size: 5em;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%,-50%);
}

.playBtn:hover {
    color:white;
}

h2 + p.subtitle {
    color: #ff4f4f;
    margin-top: 0;
}

.s3 {
    justify-content: center;
}

.s3content {
    /* margin-left: 10px;
    margin-right: 10px; */
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    flex: 1 1 1100px;
    max-width: 1100px;
    align-items: stretch;
    
}

.s3subcontent:hover > div > div > h3 {
    color: #516c85;
}

.s3subcontent {
    flex: 1 1 30%;
    border-radius: 0.25em;
    margin: 15px;
    min-width: 260px;

    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.imgContainer {
    position: relative;
    padding: 0;
}

.imgContainer > i {
    position: absolute;
    bottom: 0;
}

.s3subcontent img, video {
    width: 100%;
}

.s3subcontent > div > div > h3 {
    transition: 0.1s linear;
    font-size: 1.3em;
    margin-top: 5px;
    margin-bottom: 10px;
    color: #252525;
}

.cardContainer {
    padding: 15px;
}

.cardContent {
    color: #808080;
    font-size: 0.9em;
}

.sContact {
    padding-top: 4em;
    justify-content: center;
}

.sContact > div.title {
    border-top: 1px solid #e6e6e6;
    text-align: center;
    padding: 50px 1em;
    background-color: #f8f8f8;
    width: 100%;
    /* border-top: 1px solid; */
    color: #9f9f9f;
    font-size: 2.5em;
    font-weight: bold;
}

.sContact > div {
    background-color: #f8f8f8;
    width: 100%;
    margin: 0;
    text-align: center;

}

.footer {
    /* display: inline-block; */
    text-align: center;
    padding-top:2em;
    background-color: #f8f8f8;
    justify-content: center;
    padding-bottom: 15px;
    color: #9f9f9f;
    font-size: 0.8em;
}

.md-chip {
    color: #516c85;
    display: inline-block;
    background: #eee;
    padding: 0 12px;
    border-radius: 32px;
    font-size: 15px;
  }

.md-chip, .md-chip-icon {
    height: 32px;
    line-height: 32px;
    margin: 5px 0;
  }

  .md-chip:hover  .md-chip-icon {
    background: #ff4f4f;
  }

  .md-chip-icon {
    transition: 0.1s linear;
    display: block;
    float: left;
    background: #516c85;
    width: 32px;
    border-radius: 50%;
    text-align: center;
    color: white;
    margin: 0 8px 0 -12px;
  }

  .md-chip-clickable {
    cursor: pointer;
   }

.pause {
    display: none;
}

.play {
    display: inline;
}

.dpNone {
    display: none;
}

